dev: fix the errors for submodule deepcopy

--- a/lsp/pyproject.toml
+++ b/lsp/pyproject.toml
@@ -19,7 +19,7 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License"
 ]
 dependencies = [
-    "intc==0.1",
+    "intc>=0.1, <0.2",
     "platformdirs>=4.2.0",
     "pygls>=1.1",
     "tree-sitter>=0.21.1,<=0.22"
